--- a/formkiq/package.json
+++ b/formkiq/package.json
@@ -15,13 +15,12 @@
   },
   "private": true,
   "devDependencies": {
-    "@nrwl/cli": "14.6.3",
-    "@nrwl/eslint-plugin-nx": "14.6.3",
-    "@nrwl/jest": "14.6.3",
-    "@nrwl/linter": "14.6.3",
-    "@nrwl/react": "^15.2.1",
-    "@nrwl/web": "^15.2.1",
-    "@nrwl/workspace": "14.6.3",
+    "@nx/devkit": "16.10.0",
+    "@nx/eslint-plugin": "16.10.0",
+    "@nx/jest": "16.10.0",
+    "@nx/js": "16.10.0",
+    "@nx/react": "16.10.0",
+    "@nx/webpack": "16.10.0",
     "@playwright/test": "^1.39.0",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/react": "13.3.0",
@@ -36,8 +35,8 @@
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "5.3.3",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "~5.33.1",
-    "@typescript-eslint/parser": "~5.33.1",
+    "@typescript-eslint/eslint-plugin": "5.60.1",
+    "@typescript-eslint/parser": "5.60.1",
     "autoprefixer": "^10.4.8",
     "babel-jest": "28.1.1",
     "eslint": "~8.15.0",
@@ -48,8 +47,8 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
-    "msw": "^0.47.4",
-    "nx": "14.6.3",
+    "msw": "^2.7.0",
+    "nx": "^16.10.0",
     "playwright": "^1.32.1",
     "postcss": "^8.4.31",
     "prettier": "^2.6.2",
@@ -57,12 +56,16 @@
     "tailwindcss": "^3.2.4",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.7.2",
+    "typescript": "4.8.4",
+    "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
     "@mands/nx-playwright": "^0.4.0",
+    "@nrwl/cypress": "^19.8.4",
+    "@nrwl/js": "^19.8.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@popperjs/core": "^2.11.6",
     "@projectstorm/react-diagrams": "^7.0.3",
     "@reduxjs/toolkit": "^1.9.7",
@@ -85,6 +88,7 @@
     "react-hook-form": "^7.34.2",
     "react-popper": "^2.3.0",
     "react-redux": "^8.0.2",
+    "react-refresh": "^0.16.0",
     "react-router-dom": "6.3.0",
     "react-tooltip": "^5.27.1",
     "reactflow": "^11.10.1",
@@ -92,8 +96,13 @@
     "redux-thunk": "^2.4.1",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
+    "semver": "^7.5.2",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "vanilla-jsoneditor": "^0.21.6"
+  },
+  "overrides": {
+    "semver": "^7.5.2",
+    "webpack": "^5.75.0"
   }
 }
