--- a/formkiq/apps/formkiq-document-console-react-e2e/project.json
+++ b/formkiq/apps/formkiq-document-console-react-e2e/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "formkiq-document-console-react-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/formkiq-document-console-react-e2e/src",
   "projectType": "application",
